--- a/inst/doc/TSSi.lyx
+++ b/inst/doc/TSSi.lyx
@@ -117,23 +117,19 @@ Julian Gehring, Clemens Kreutz
 \end_layout
 
 \begin_layout Chunk
-
 <<settings, echo=FALSE>>=
 \end_layout
 
 \begin_layout Chunk
-
 set.seed(1)
 \end_layout
 
 \begin_layout Chunk
-
 options(width=65, SweaveHooks=list(fig=function() par(mar=c(5.1, 5.1, 4.1,
  1.5))))
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -192,31 +188,26 @@ Rvar{readData}
  contains the chromosome, the strand, the 5' position of the reads, and
  the total number of reads at that position.
  Further, regions based on existing annotation are also provided which are
- used to devide the data into independent subsets for analysis.
+ used to divide the data into independent subsets for analysis.
 \end_layout
 
 \begin_layout Chunk
-
 <<load_data>>=
 \end_layout
 
 \begin_layout Chunk
-
 library(TSSi)
 \end_layout
 
 \begin_layout Chunk
-
 data(readData)
 \end_layout
 
 \begin_layout Chunk
-
 head(readData)
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -263,33 +254,27 @@ Rclass{TssData}
 \end_layout
 
 \begin_layout Chunk
-
 <<segmentize>>=
 \end_layout
 
 \begin_layout Chunk
-
 attach(readData)
 \end_layout
 
 \begin_layout Chunk
-
 x <- segmentize(counts=counts, start=start, chr=chromosome, region=region,
  strand=strand)
 \end_layout
 
 \begin_layout Chunk
-
 detach(readData)
 \end_layout
 
 \begin_layout Chunk
-
 x
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -332,7 +317,6 @@ Rmethod{plot}
 \end_layout
 
 \begin_layout Chunk
-
 <<get_segments>>=
 \begin_inset Newline newline
 \end_inset
@@ -341,12 +325,10 @@ segments(x)
 \end_layout
 
 \begin_layout Chunk
-
 names(x)
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -355,27 +337,22 @@ names(x)
 \end_layout
 
 \begin_layout Chunk
-
 <<get_reads>>=
 \end_layout
 
 \begin_layout Chunk
-
 head(reads(x, 3))
 \end_layout
 
 \begin_layout Chunk
-
 head(start(x, 3))
 \end_layout
 
 \begin_layout Chunk
-
 head(start(x, names(x)[3]))
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -386,7 +363,7 @@ Normalization
 \begin_layout Standard
 The normalization reduces the noise by shrinking the counts towards zero.
  This step is intended to eliminate false positive counts as well as making
- further analyses more robust by reducing the impact of large counts.
+ further analyzes more robust by reducing the impact of large counts.
  Such a shrinkage or regularization procedure constitutes a well-established
  strategy in statistics to make predictions conservative, i.e.
  to reduce the number of false positive predictions.
@@ -412,22 +389,19 @@ Rpackage{multicore}
 
 \end_inset
 
- package, the fitting can be parallelized over multiple processor cores
- in order to decrease computation time.
+ package, the fitting can be spread over multiple processor cores in order
+ to decrease computation time.
 \end_layout
 
 \begin_layout Chunk
-
 <<normalize_ratio>>=
 \end_layout
 
 \begin_layout Chunk
-
 yRatio <- normalize(x)
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -436,27 +410,22 @@ yRatio <- normalize(x)
 \end_layout
 
 \begin_layout Chunk
-
 <<normalize_fit>>=
 \end_layout
 
 \begin_layout Chunk
-
 yFit <- normalize(x, fit=TRUE)
 \end_layout
 
 \begin_layout Chunk
-
 yFit
 \end_layout
 
 \begin_layout Chunk
-
 head(reads(yFit, 3))
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -465,17 +434,14 @@ head(reads(yFit, 3))
 \end_layout
 
 \begin_layout Chunk
-
 <<plot_normalize_fit, fig=TRUE, echo=TRUE>>=
 \end_layout
 
 \begin_layout Chunk
-
 plot(yFit, 3)
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -518,37 +484,30 @@ Rfunarg{tau}
 \end_layout
 
 \begin_layout Chunk
-
 <<identify>>=
 \end_layout
 
 \begin_layout Chunk
-
 z <- identify(yFit)
 \end_layout
 
 \begin_layout Chunk
-
 z
 \end_layout
 
 \begin_layout Chunk
-
 head(segments(z))
 \end_layout
 
 \begin_layout Chunk
-
 head(tss(z, 3))
 \end_layout
 
 \begin_layout Chunk
-
 head(reads(z, 3))
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -557,17 +516,14 @@ head(reads(z, 3))
 \end_layout
 
 \begin_layout Chunk
-
 <<plot_identify, fig=TRUE, echo=TRUE>>=
 \end_layout
 
 \begin_layout Chunk
-
 plot(z, 3)
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -617,47 +573,38 @@ Rmethod{plot}
 \end_layout
 
 \begin_layout Chunk
-
 <<plot_custom, fig=TRUE, echo=TRUE>>=
 \end_layout
 
 \begin_layout Chunk
-
 plot(z, 4,
 \end_layout
 
 \begin_layout Chunk
-
 ratio=FALSE,
 \end_layout
 
 \begin_layout Chunk
-
 threshold=FALSE,
 \end_layout
 
 \begin_layout Chunk
-
 baseline=FALSE,
 \end_layout
 
 \begin_layout Chunk
-
 expect=TRUE, expectArgs=list(type="l"), extend=TRUE,
 \end_layout
 
 \begin_layout Chunk
-
 countsArgs=list(type="h", col="darkgray", pch=NA),
 \end_layout
 
 \begin_layout Chunk
-
 plotArgs=list(xlab="Genomic position", main="TSS for segment 's1_-_155'"))
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -751,67 +698,54 @@ Rpackage{rtracklayer}
 \end_layout
 
 \begin_layout Chunk
-
 <<convert_iranges>>=
 \end_layout
 
 \begin_layout Chunk
-
 readsRd <- readsAsRangedData(z)
 \end_layout
 
 \begin_layout Chunk
-
 segmentsRd <- segmentsAsRangedData(z)
 \end_layout
 
 \begin_layout Chunk
-
 tssRd <- tssAsRangedData(z)
 \end_layout
 
 \begin_layout Chunk
-
 tssRd
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
 \begin_layout Chunk
-
 <<export_rtracklayer>>=
 \end_layout
 
 \begin_layout Chunk
-
 library(rtracklayer)
 \end_layout
 
 \begin_layout Chunk
-
 tmpFile <- tempfile()
 \end_layout
 
 \begin_layout Chunk
-
 export.gff3(readsRd, paste(tmpFile, "gff", sep="."))
 \end_layout
 
 \begin_layout Chunk
-
 export.bed(segmentsRd, paste(tmpFile, "bed", sep="."))
 \end_layout
 
 \begin_layout Chunk
-
 export.bed(tssRd, paste(tmpFile, "bed", sep="."))
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
@@ -827,17 +761,14 @@ Session info
 \end_layout
 
 \begin_layout Chunk
-
 <<sessionInfo, results=tex, echo=FALSE>>=
 \end_layout
 
 \begin_layout Chunk
-
 toLatex(sessionInfo(), locale=FALSE)
 \end_layout
 
 \begin_layout Chunk
-
 @
 \end_layout
 
