--- a/inst/doc/TSSi.Rnw
+++ b/inst/doc/TSSi.Rnw
@@ -87,7 +87,7 @@ head(readData)
 
 \section{Segment read data}
 
-As a first step in the analysis, the read data is taken by the \Rmethod{segmentize}
+As a first step in the analysis, the read data is taken by the \Rmethod{segmentizeCounts}
 method. Here, the data is divided into \emph{segments}, for which
 the following analysis is performed independently. This is done based
 on the information of the chromosomes, the strands, and the optional
@@ -96,7 +96,7 @@ regions. The segmented data is returned as an object of the class
 
 <<segmentize>>=
 attach(readData)
-x <- segmentize(counts=counts, start=start, chr=chromosome, region=region, strand=strand)
+x <- segmentizeCounts(counts=counts, start=start, chr=chromosome, region=region, strand=strand)
 detach(readData)
 x
 @
@@ -139,11 +139,11 @@ can be spread over multiple processor cores in order to decrease computation
 time.
 
 <<normalize_ratio>>=
-yRatio <- normalize(x)
+yRatio <- normalizeCounts(x)
 @
 
 <<normalize_fit>>=
-yFit <- normalize(x, fit=TRUE)
+yFit <- normalizeCounts(x, fit=TRUE)
 yFit
 head(reads(yFit, 3))
 @
@@ -171,7 +171,7 @@ fact that false positive counts are preferably found in 5' direction
 of a TSS. This procedure is iterated as long as the set of TSS increases.
 
 <<identify>>=
-z <- identify(yFit)
+z <- identifyStartSites(yFit)
 z
 head(segments(z))
 head(tss(z, 3))
